--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "semantic-ui-react": "^1.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
