--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.2.1"
+    "semantic-ui-react": "^1.2.1",
+    "serve": "^11.3.2"
   },
   "scripts": {
-    "start": "node index.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+"dev": "react-scripts start",
+"start": "serve -s build",
+"build": "react-scripts build",
+"test": "react-scripts test --env=jsdom",
+"eject": "react-scripts eject",
+"heroku-postbuild": "npm run build"
+},
+
+
   "eslintConfig": {
     "extends": "react-app"
   },
