--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 "build": "react-scripts build",
 "test": "react-scripts test --env=jsdom",
 "eject": "react-scripts eject",
-"heroku-postbuild": "npm run build"
+"postbuild": "npm run build"
 },
 
 
